# graph-sto-iht

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exp_bc_data_process.py  exp_bc_dp.py  exp_bc_overlap_group_lasso.py  exp_bc_result_analysis.py  exp_bc_run.py  exp_bc_run_2.py  exp_bc_run_logit.py  exp_bc_show_genes.py  exp_sr_test01.py  exp_sr_test02.py  exp_sr_test03.py  exp_sr_test03_2.py  exp_sr_test04.py  exp_sr_test05.py  exp_sr_test06.py  exp_sr_test07.py  exp_sr_test08.py  exp_sr_test09.py  nohup.out  readme.txt  run_time_1600.pkl  run_time_2500.pkl  run_time_3600.pkl  setup.py  test.pkl
algo_wrapper/: __init__.py  algo_ls.py  algo_wrapper.py  algo_wrapper_test.py  base.py  build.sh  setup.py
algo_wrapper/c/: __init__.py  algo_best_subset.c  algo_best_subset.h  algo_conjugate_grad.c  algo_conjugate_grad.h  algo_graph_sto_iht.c  algo_sto_iht.c  (+23 more)
data/: angio.mat  background.mat  edge.txt  entrez.mat  icml.mat  mnist_test_case_0.txt  readme.txt  show_genes_convex.pkl  sr_images_50_50_trial_00.pkl
docs/: custom.css
overlasso-package/: data_pre_processing.m  pathways.txt  single_overLasso.m
results/: results_exp_bc_00_002.pkl  results_exp_bc_00_050.pkl  results_exp_bc_00_10.pkl  results_exp_bc_00_20.pkl  results_exp_bc_00_30.pkl  results_exp_bc_00_50.pkl  results_exp_bc_01_050.pkl  results_exp_bc_01_10.pkl  results_exp_bc_01_20.pkl  results_exp_bc_01_30.pkl  results_exp_bc_01_50.pkl  results_exp_bc_02_050.pkl  results_exp_bc_02_10.pkl  results_exp_bc_02_20.pkl  results_exp_bc_02_30.pkl  results_exp_bc_03_050.pkl  results_exp_bc_03_10.pkl  results_exp_bc_04_050.pkl  results_exp_bc_04_10.pkl  results_exp_bc_05_050.pkl  results_exp_bc_05_10.pkl  results_exp_bc_05_20.pkl  results_exp_bc_05_30.pkl  results_exp_bc_06_050.pkl  results_exp_bc_06_10.pkl  results_exp_bc_06_20.pkl  results_exp_bc_06_30.pkl  results_exp_bc_07_050.pkl  results_exp_bc_07_10.pkl  results_exp_bc_07_20.pkl  results_exp_bc_07_30.pkl  results_exp_bc_07_50.pkl  results_exp_bc_08_050.pkl  results_exp_bc_08_10.pkl  results_exp_bc_08_40.pkl  results_exp_bc_08_50.pkl  results_exp_bc_09_050.pkl  results_exp_bc_09_10.pkl  results_exp_bc_10_050.pkl  results_exp_bc_10_10.pkl  (+296 more)
results_1/: results_exp_bc_00_20.pkl  results_exp_bc_00_30.pkl  results_exp_bc_00_40.pkl  results_exp_bc_00_50.pkl  results_exp_bc_01_20.pkl  results_exp_bc_01_30.pkl  results_exp_bc_01_50.pkl  results_exp_bc_02_20.pkl  results_exp_bc_02_30.pkl  results_exp_bc_02_40.pkl  results_exp_bc_02_50.pkl  results_exp_bc_03_20.pkl  results_exp_bc_03_30.pkl  results_exp_bc_03_50.pkl  results_exp_bc_04_20.pkl  results_exp_bc_04_30.pkl  results_exp_bc_04_40.pkl  results_exp_bc_04_50.pkl  results_exp_bc_05_20.pkl  results_exp_bc_05_30.pkl  results_exp_bc_05_40.pkl  results_exp_bc_05_50.pkl  results_exp_bc_06_20.pkl  results_exp_bc_06_30.pkl  results_exp_bc_06_40.pkl  results_exp_bc_06_50.pkl  results_exp_bc_07_20.pkl  results_exp_bc_07_30.pkl  results_exp_bc_07_40.pkl  results_exp_bc_07_50.pkl  results_exp_bc_08_20.pkl  results_exp_bc_08_30.pkl  results_exp_bc_08_40.pkl  results_exp_bc_08_50.pkl  results_exp_bc_09_20.pkl  results_exp_bc_09_30.pkl  results_exp_bc_09_40.pkl  results_exp_bc_09_50.pkl  results_exp_bc_10_20.pkl  results_exp_bc_10_30.pkl  (+37 more)
results_2/: results_exp_bc_00_20.pkl  results_exp_bc_00_30.pkl  results_exp_bc_00_40.pkl  results_exp_bc_00_50.pkl  results_exp_bc_01_20.pkl  results_exp_bc_01_30.pkl  results_exp_bc_01_40.pkl  results_exp_bc_01_50.pkl  results_exp_bc_02_20.pkl  results_exp_bc_02_30.pkl  results_exp_bc_02_40.pkl  results_exp_bc_02_50.pkl  results_exp_bc_03_20.pkl  results_exp_bc_03_30.pkl  results_exp_bc_03_40.pkl  results_exp_bc_03_50.pkl  results_exp_bc_04_20.pkl  results_exp_bc_04_30.pkl  results_exp_bc_04_40.pkl  results_exp_bc_04_50.pkl  results_exp_bc_05_20.pkl  results_exp_bc_05_30.pkl  results_exp_bc_05_40.pkl  results_exp_bc_05_50.pkl  results_exp_bc_06_20.pkl  results_exp_bc_06_30.pkl  results_exp_bc_06_40.pkl  results_exp_bc_06_50.pkl  results_exp_bc_07_20.pkl  results_exp_bc_07_30.pkl  results_exp_bc_07_40.pkl  results_exp_bc_07_50.pkl  results_exp_bc_08_20.pkl  results_exp_bc_08_30.pkl  results_exp_bc_08_40.pkl  results_exp_bc_08_50.pkl  results_exp_bc_09_20.pkl  results_exp_bc_09_30.pkl  results_exp_bc_09_40.pkl  results_exp_bc_09_50.pkl  (+40 more)
results_3/: results_exp_bc_00_20.pkl  results_exp_bc_00_30.pkl  results_exp_bc_00_50.pkl  results_exp_bc_01_20.pkl  results_exp_bc_01_30.pkl  results_exp_bc_01_40.pkl  results_exp_bc_01_50.pkl  results_exp_bc_02_20.pkl  results_exp_bc_02_30.pkl  results_exp_bc_02_40.pkl  results_exp_bc_02_50.pkl  results_exp_bc_03_20.pkl  results_exp_bc_03_30.pkl  results_exp_bc_03_40.pkl  results_exp_bc_03_50.pkl  results_exp_bc_04_20.pkl  results_exp_bc_04_30.pkl  results_exp_bc_04_40.pkl  results_exp_bc_04_50.pkl  results_exp_bc_05_20.pkl  results_exp_bc_05_30.pkl  results_exp_bc_05_50.pkl  results_exp_bc_06_20.pkl  results_exp_bc_06_30.pkl  results_exp_bc_06_40.pkl  results_exp_bc_06_50.pkl  results_exp_bc_07_20.pkl  results_exp_bc_07_30.pkl  results_exp_bc_07_50.pkl  results_exp_bc_08_20.pkl  results_exp_bc_08_30.pkl  results_exp_bc_08_40.pkl  results_exp_bc_08_50.pkl  results_exp_bc_09_20.pkl  results_exp_bc_09_30.pkl  results_exp_bc_09_50.pkl  results_exp_bc_10_20.pkl  results_exp_bc_10_30.pkl  results_exp_bc_10_50.pkl  results_exp_bc_11_20.pkl  (+30 more)
(+38 files in other folders)
